--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://goitacademy.github.io/parcel-project-template",
   "scripts": {
     "start": "parcel ./index.html",
-    "build": "parcel build ./index.html --public-url /parcel-project-template/"
+    "build": "parcel build ./index.html --public-url /goit-js-hw-08/"
   },
   "repository": {
     "type": "git",
@@ -20,15 +20,17 @@
   "dependencies": {
     "@vimeo/player": "^2.18.0",
     "lodash.throttle": "^4.1.1",
-    "modern-normalize": "^1.1.0"
+    "modern-normalize": "^1.1.0",
+    "simple-lightbox": "^2.1.0",
+    "simplelightbox": "^2.10.4"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "parcel": "^2.6.0",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-reporter-clean-dist": "^1.0.4",
-    "posthtml-include": "^1.7.4",
-    "simplelightbox": "^2.10.4"
+    "posthtml-include": "^1.7.4"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
