--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://goitacademy.github.io/parcel-project-template",
+  "homepage": "https://goitacademy.github.io/goit-js-hw-08",
   "scripts": {
     "start": "parcel ./index.html",
     "build": "parcel build ./index.html --public-url /goit-js-hw-08/"
